--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">salmon</string>
+    <string name="activity_network_state_test_test">测试</string>
+    <string name="activity_network_state_test_clear">清屏</string>
+    <string name="activity_main_net_state_check">网络状态检测</string>
+    <string name="hello_world">hello world</string>
 </resources>
