--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="hello_world">hello world</string>
     <string name="take_photo">拍照</string>
     <string name="activity_main_take_photo_test">拍照功能测试</string>
+    <string name="activity_main_normal_test">通用测试</string>
 </resources>
